--- a/prototype/prototype.csproj
+++ b/prototype/prototype.csproj
@@ -59,6 +59,8 @@
 	  <None Remove="Pages\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Folder Include="Pages\" />
+	  <MauiXaml Update="Pages\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 </Project>
